added circleci build

--- a/sass/emojis/activities/_sport.scss
+++ b/sass/emojis/activities/_sport.scss
@@ -7,7 +7,7 @@
 .emoji-tennis:before { content: '\1f3be'; }
 .emoji-pool-8-ball:before { content: '\1f3b1'; }
 .emoji-bowling:before { content: '\1f3b3'; }
-.emoji-cricket:before { content: '\1f3cf'; }
+.emoji-cricket-game:before { content: '\1f3cf'; }
 .emoji-field-hockey:before { content: '\1f3d1'; }
 .emoji-ice-hockey:before { content: '\1f3d2'; }
 .emoji-ping-pong:before { content: '\1f3d3'; }
@@ -21,3 +21,5 @@
 .emoji-fishing-pole:before { content: '\1f3a3'; }
 .emoji-running-shirt:before { content: '\1f3bd'; }
 .emoji-skis:before { content: '\1f3bf'; }
+.emoji-sled:before { content: '\1f6f7'; }
+.emoji-curling-stone:before { content: '\1f94c'; }
