--- a/sass/emojis/animals-nature/_animal-bug.scss
+++ b/sass/emojis/animals-nature/_animal-bug.scss
@@ -1,9 +1,10 @@
-.emoji-butterfly:before { content: '\1f98b'; }
 .emoji-snail:before { content: '\1f40c'; }
+.emoji-butterfly:before { content: '\1f98b'; }
 .emoji-bug:before { content: '\1f41b'; }
 .emoji-ant:before { content: '\1f41c'; }
 .emoji-honeybee:before { content: '\1f41d'; }
 .emoji-lady-beetle:before { content: '\1f41e'; }
+.emoji-cricket:before { content: '\1f997'; }
 .emoji-spider:before { content: '\1f577'; }
 .emoji-spider-web:before { content: '\1f578'; }
 .emoji-scorpion:before { content: '\1f982'; }
