--- a/sass/emojis/animals-nature/_animal-mammal.scss
+++ b/sass/emojis/animals-nature/_animal-mammal.scss
@@ -14,8 +14,9 @@
 .emoji-leopard:before { content: '\1f406'; }
 .emoji-horse-face:before { content: '\1f434'; }
 .emoji-horse:before { content: '\1f40e'; }
-.emoji-deer:before { content: '\1f98c'; }
 .emoji-unicorn-face:before { content: '\1f984'; }
+.emoji-zebra:before { content: '\1f993'; }
+.emoji-deer:before { content: '\1f98c'; }
 .emoji-cow-face:before { content: '\1f42e'; }
 .emoji-ox:before { content: '\1f402'; }
 .emoji-water-buffalo:before { content: '\1f403'; }
@@ -29,6 +30,7 @@
 .emoji-goat:before { content: '\1f410'; }
 .emoji-camel:before { content: '\1f42a'; }
 .emoji-two-hump-camel:before { content: '\1f42b'; }
+.emoji-giraffe:before { content: '\1f992'; }
 .emoji-elephant:before { content: '\1f418'; }
 .emoji-rhinoceros:before { content: '\1f98f'; }
 .emoji-mouse-face:before { content: '\1f42d'; }
@@ -38,6 +40,7 @@
 .emoji-rabbit-face:before { content: '\1f430'; }
 .emoji-rabbit:before { content: '\1f407'; }
 .emoji-chipmunk:before { content: '\1f43f'; }
+.emoji-hedgehog:before { content: '\1f994'; }
 .emoji-bat:before { content: '\1f987'; }
 .emoji-bear-face:before { content: '\1f43b'; }
 .emoji-koala:before { content: '\1f428'; }
