--- a/sass/emojis/animals-nature/_animal-reptile.scss
+++ b/sass/emojis/animals-nature/_animal-reptile.scss
@@ -4,3 +4,5 @@
 .emoji-snake:before { content: '\1f40d'; }
 .emoji-dragon-face:before { content: '\1f432'; }
 .emoji-dragon:before { content: '\1f409'; }
+.emoji-sauropod:before { content: '\1f995'; }
+.emoji-t-rex:before { content: '\1f996'; }
