--- a/sass/emojis/food-drink/_dishware.scss
+++ b/sass/emojis/food-drink/_dishware.scss
@@ -1,3 +1,4 @@
+.emoji-chopsticks:before { content: '\1f962'; }
 .emoji-fork-and-knife-with-plate:before { content: '\1f37d'; }
 .emoji-fork-and-knife:before { content: '\1f374'; }
 .emoji-spoon:before { content: '\1f944'; }
