--- a/sass/emojis/food-drink/_drink.scss
+++ b/sass/emojis/food-drink/_drink.scss
@@ -11,3 +11,4 @@
 .emoji-clinking-beer-mugs:before { content: '\1f37b'; }
 .emoji-clinking-glasses:before { content: '\1f942'; }
 .emoji-tumbler-glass:before { content: '\1f943'; }
+.emoji-cup-with-straw:before { content: '\1f964'; }
