--- a/sass/emojis/food-drink/_food-asian.scss
+++ b/sass/emojis/food-drink/_food-asian.scss
@@ -11,3 +11,6 @@
 .emoji-fried-shrimp:before { content: '\1f364'; }
 .emoji-fish-cake-with-swirl:before { content: '\1f365'; }
 .emoji-dango:before { content: '\1f361'; }
+.emoji-dumpling:before { content: '\1f95f'; }
+.emoji-fortune-cookie:before { content: '\1f960'; }
+.emoji-takeout-box:before { content: '\1f961'; }
