--- a/sass/emojis/food-drink/_food-fruit.scss
+++ b/sass/emojis/food-drink/_food-fruit.scss
@@ -13,3 +13,4 @@
 .emoji-strawberry:before { content: '\1f353'; }
 .emoji-kiwi-fruit:before { content: '\1f95d'; }
 .emoji-tomato:before { content: '\1f345'; }
+.emoji-coconut:before { content: '\1f965'; }
