--- a/sass/emojis/food-drink/_food-prepared.scss
+++ b/sass/emojis/food-drink/_food-prepared.scss
@@ -1,15 +1,18 @@
 .emoji-bread:before { content: '\1f35e'; }
 .emoji-croissant:before { content: '\1f950'; }
 .emoji-baguette-bread:before { content: '\1f956'; }
+.emoji-pretzel:before { content: '\1f968'; }
 .emoji-pancakes:before { content: '\1f95e'; }
 .emoji-cheese-wedge:before { content: '\1f9c0'; }
 .emoji-meat-on-bone:before { content: '\1f356'; }
 .emoji-poultry-leg:before { content: '\1f357'; }
+.emoji-cut-of-meat:before { content: '\1f969'; }
 .emoji-bacon:before { content: '\1f953'; }
 .emoji-hamburger:before { content: '\1f354'; }
 .emoji-french-fries:before { content: '\1f35f'; }
 .emoji-pizza:before { content: '\1f355'; }
 .emoji-hot-dog:before { content: '\1f32d'; }
+.emoji-sandwich:before { content: '\1f96a'; }
 .emoji-taco:before { content: '\1f32e'; }
 .emoji-burrito:before { content: '\1f32f'; }
 .emoji-stuffed-flatbread:before { content: '\1f959'; }
@@ -17,5 +20,7 @@
 .emoji-cooking:before { content: '\1f373'; }
 .emoji-shallow-pan-of-food:before { content: '\1f958'; }
 .emoji-pot-of-food:before { content: '\1f372'; }
+.emoji-bowl-with-spoon:before { content: '\1f963'; }
 .emoji-green-salad:before { content: '\1f957'; }
 .emoji-popcorn:before { content: '\1f37f'; }
+.emoji-canned-food:before { content: '\1f96b'; }
