--- a/sass/emojis/food-drink/_food-sweet.scss
+++ b/sass/emojis/food-drink/_food-sweet.scss
@@ -5,6 +5,7 @@
 .emoji-cookie:before { content: '\1f36a'; }
 .emoji-birthday-cake:before { content: '\1f382'; }
 .emoji-shortcake:before { content: '\1f370'; }
+.emoji-pie:before { content: '\1f967'; }
 .emoji-chocolate-bar:before { content: '\1f36b'; }
 .emoji-candy:before { content: '\1f36c'; }
 .emoji-lollipop:before { content: '\1f36d'; }
