--- a/sass/emojis/food-drink/_food-vegetable.scss
+++ b/sass/emojis/food-drink/_food-vegetable.scss
@@ -5,6 +5,7 @@
 .emoji-ear-of-corn:before { content: '\1f33d'; }
 .emoji-hot-pepper:before { content: '\1f336'; }
 .emoji-cucumber:before { content: '\1f952'; }
+.emoji-broccoli:before { content: '\1f966'; }
 .emoji-mushroom:before { content: '\1f344'; }
 .emoji-peanuts:before { content: '\1f95c'; }
 .emoji-chestnut:before { content: '\1f330'; }
