--- a/sass/emojis/smileys-people/_body.scss
+++ b/sass/emojis/smileys-people/_body.scss
@@ -1,15 +1,15 @@
-.emoji-flexed-biceps:before { content: '\1f4aa'; }
-.emoji-flexed-biceps-light-skin-tone:before { content: '\1f4aa\1f3fb'; }
-.emoji-flexed-biceps-medium-light-skin-tone:before { content: '\1f4aa\1f3fc'; }
-.emoji-flexed-biceps-medium-skin-tone:before { content: '\1f4aa\1f3fd'; }
-.emoji-flexed-biceps-medium-dark-skin-tone:before { content: '\1f4aa\1f3fe'; }
-.emoji-flexed-biceps-dark-skin-tone:before { content: '\1f4aa\1f3ff'; }
 .emoji-selfie:before { content: '\1f933'; }
 .emoji-selfie-light-skin-tone:before { content: '\1f933\1f3fb'; }
 .emoji-selfie-medium-light-skin-tone:before { content: '\1f933\1f3fc'; }
 .emoji-selfie-medium-skin-tone:before { content: '\1f933\1f3fd'; }
 .emoji-selfie-medium-dark-skin-tone:before { content: '\1f933\1f3fe'; }
 .emoji-selfie-dark-skin-tone:before { content: '\1f933\1f3ff'; }
+.emoji-flexed-biceps:before { content: '\1f4aa'; }
+.emoji-flexed-biceps-light-skin-tone:before { content: '\1f4aa\1f3fb'; }
+.emoji-flexed-biceps-medium-light-skin-tone:before { content: '\1f4aa\1f3fc'; }
+.emoji-flexed-biceps-medium-skin-tone:before { content: '\1f4aa\1f3fd'; }
+.emoji-flexed-biceps-medium-dark-skin-tone:before { content: '\1f4aa\1f3fe'; }
+.emoji-flexed-biceps-dark-skin-tone:before { content: '\1f4aa\1f3ff'; }
 .emoji-backhand-index-pointing-left:before { content: '\1f448'; }
 .emoji-backhand-index-pointing-left-light-skin-tone:before { content: '\1f448\1f3fb'; }
 .emoji-backhand-index-pointing-left-medium-light-skin-tone:before { content: '\1f448\1f3fc'; }
@@ -76,12 +76,12 @@
 .emoji-call-me-hand-medium-skin-tone:before { content: '\1f919\1f3fd'; }
 .emoji-call-me-hand-medium-dark-skin-tone:before { content: '\1f919\1f3fe'; }
 .emoji-call-me-hand-dark-skin-tone:before { content: '\1f919\1f3ff'; }
-.emoji-raised-hand-with-fingers-splayed:before { content: '\1f590'; }
-.emoji-raised-hand-with-fingers-splayed-light-skin-tone:before { content: '\1f590\1f3fb'; }
-.emoji-raised-hand-with-fingers-splayed-medium-light-skin-tone:before { content: '\1f590\1f3fc'; }
-.emoji-raised-hand-with-fingers-splayed-medium-skin-tone:before { content: '\1f590\1f3fd'; }
-.emoji-raised-hand-with-fingers-splayed-medium-dark-skin-tone:before { content: '\1f590\1f3fe'; }
-.emoji-raised-hand-with-fingers-splayed-dark-skin-tone:before { content: '\1f590\1f3ff'; }
+.emoji-hand-with-fingers-splayed:before { content: '\1f590'; }
+.emoji-hand-with-fingers-splayed-light-skin-tone:before { content: '\1f590\1f3fb'; }
+.emoji-hand-with-fingers-splayed-medium-light-skin-tone:before { content: '\1f590\1f3fc'; }
+.emoji-hand-with-fingers-splayed-medium-skin-tone:before { content: '\1f590\1f3fd'; }
+.emoji-hand-with-fingers-splayed-medium-dark-skin-tone:before { content: '\1f590\1f3fe'; }
+.emoji-hand-with-fingers-splayed-dark-skin-tone:before { content: '\1f590\1f3ff'; }
 .emoji-raised-hand:before { content: '\270b'; }
 .emoji-raised-hand-light-skin-tone:before { content: '\270b\1f3fb'; }
 .emoji-raised-hand-medium-light-skin-tone:before { content: '\270b\1f3fc'; }
@@ -142,18 +142,24 @@
 .emoji-waving-hand-medium-skin-tone:before { content: '\1f44b\1f3fd'; }
 .emoji-waving-hand-medium-dark-skin-tone:before { content: '\1f44b\1f3fe'; }
 .emoji-waving-hand-dark-skin-tone:before { content: '\1f44b\1f3ff'; }
-.emoji-clapping-hands:before { content: '\1f44f'; }
-.emoji-clapping-hands-light-skin-tone:before { content: '\1f44f\1f3fb'; }
-.emoji-clapping-hands-medium-light-skin-tone:before { content: '\1f44f\1f3fc'; }
-.emoji-clapping-hands-medium-skin-tone:before { content: '\1f44f\1f3fd'; }
-.emoji-clapping-hands-medium-dark-skin-tone:before { content: '\1f44f\1f3fe'; }
-.emoji-clapping-hands-dark-skin-tone:before { content: '\1f44f\1f3ff'; }
+.emoji-love-you-gesture:before { content: '\1f91f'; }
+.emoji-love-you-gesture-light-skin-tone:before { content: '\1f91f\1f3fb'; }
+.emoji-love-you-gesture-medium-light-skin-tone:before { content: '\1f91f\1f3fc'; }
+.emoji-love-you-gesture-medium-skin-tone:before { content: '\1f91f\1f3fd'; }
+.emoji-love-you-gesture-medium-dark-skin-tone:before { content: '\1f91f\1f3fe'; }
+.emoji-love-you-gesture-dark-skin-tone:before { content: '\1f91f\1f3ff'; }
 .emoji-writing-hand:before { content: '\270d'; }
 .emoji-writing-hand-light-skin-tone:before { content: '\270d\1f3fb'; }
 .emoji-writing-hand-medium-light-skin-tone:before { content: '\270d\1f3fc'; }
 .emoji-writing-hand-medium-skin-tone:before { content: '\270d\1f3fd'; }
 .emoji-writing-hand-medium-dark-skin-tone:before { content: '\270d\1f3fe'; }
 .emoji-writing-hand-dark-skin-tone:before { content: '\270d\1f3ff'; }
+.emoji-clapping-hands:before { content: '\1f44f'; }
+.emoji-clapping-hands-light-skin-tone:before { content: '\1f44f\1f3fb'; }
+.emoji-clapping-hands-medium-light-skin-tone:before { content: '\1f44f\1f3fc'; }
+.emoji-clapping-hands-medium-skin-tone:before { content: '\1f44f\1f3fd'; }
+.emoji-clapping-hands-medium-dark-skin-tone:before { content: '\1f44f\1f3fe'; }
+.emoji-clapping-hands-dark-skin-tone:before { content: '\1f44f\1f3ff'; }
 .emoji-open-hands:before { content: '\1f450'; }
 .emoji-open-hands-light-skin-tone:before { content: '\1f450\1f3fb'; }
 .emoji-open-hands-medium-light-skin-tone:before { content: '\1f450\1f3fc'; }
@@ -166,6 +172,12 @@
 .emoji-raising-hands-medium-skin-tone:before { content: '\1f64c\1f3fd'; }
 .emoji-raising-hands-medium-dark-skin-tone:before { content: '\1f64c\1f3fe'; }
 .emoji-raising-hands-dark-skin-tone:before { content: '\1f64c\1f3ff'; }
+.emoji-palms-up-together:before { content: '\1f932'; }
+.emoji-palms-up-together-light-skin-tone:before { content: '\1f932\1f3fb'; }
+.emoji-palms-up-together-medium-light-skin-tone:before { content: '\1f932\1f3fc'; }
+.emoji-palms-up-together-medium-skin-tone:before { content: '\1f932\1f3fd'; }
+.emoji-palms-up-together-medium-dark-skin-tone:before { content: '\1f932\1f3fe'; }
+.emoji-palms-up-together-dark-skin-tone:before { content: '\1f932\1f3ff'; }
 .emoji-folded-hands:before { content: '\1f64f'; }
 .emoji-folded-hands-light-skin-tone:before { content: '\1f64f\1f3fb'; }
 .emoji-folded-hands-medium-light-skin-tone:before { content: '\1f64f\1f3fc'; }
@@ -195,5 +207,6 @@
 .emoji-eyes:before { content: '\1f440'; }
 .emoji-eye:before { content: '\1f441'; }
 .emoji-eye-in-speech-bubble:before { content: '\1f441\fe0f\200d\1f5e8\fe0f'; }
+.emoji-brain:before { content: '\1f9e0'; }
 .emoji-tongue:before { content: '\1f445'; }
 .emoji-mouth:before { content: '\1f444'; }
