--- a/sass/emojis/smileys-people/_clothing.scss
+++ b/sass/emojis/smileys-people/_clothing.scss
@@ -3,6 +3,10 @@
 .emoji-necktie:before { content: '\1f454'; }
 .emoji-t-shirt:before { content: '\1f455'; }
 .emoji-jeans:before { content: '\1f456'; }
+.emoji-scarf:before { content: '\1f9e3'; }
+.emoji-gloves:before { content: '\1f9e4'; }
+.emoji-coat:before { content: '\1f9e5'; }
+.emoji-socks:before { content: '\1f9e6'; }
 .emoji-dress:before { content: '\1f457'; }
 .emoji-kimono:before { content: '\1f458'; }
 .emoji-bikini:before { content: '\1f459'; }
@@ -21,6 +25,7 @@
 .emoji-womans-hat:before { content: '\1f452'; }
 .emoji-top-hat:before { content: '\1f3a9'; }
 .emoji-graduation-cap:before { content: '\1f393'; }
+.emoji-billed-cap:before { content: '\1f9e2'; }
 .emoji-rescue-workers-helmet:before { content: '\26d1'; }
 .emoji-prayer-beads:before { content: '\1f4ff'; }
 .emoji-lipstick:before { content: '\1f484'; }
