--- a/sass/emojis/smileys-people/_emotion.scss
+++ b/sass/emojis/smileys-people/_emotion.scss
@@ -9,6 +9,7 @@
 .emoji-blue-heart:before { content: '\1f499'; }
 .emoji-green-heart:before { content: '\1f49a'; }
 .emoji-yellow-heart:before { content: '\1f49b'; }
+.emoji-orange-heart:before { content: '\1f9e1'; }
 .emoji-purple-heart:before { content: '\1f49c'; }
 .emoji-black-heart:before { content: '\1f5a4'; }
 .emoji-heart-with-ribbon:before { content: '\1f49d'; }
