--- a/sass/emojis/smileys-people/_face-negative.scss
+++ b/sass/emojis/smileys-people/_face-negative.scss
@@ -10,10 +10,13 @@
 .emoji-anguished-face:before { content: '\1f627'; }
 .emoji-fearful-face:before { content: '\1f628'; }
 .emoji-weary-face:before { content: '\1f629'; }
+.emoji-exploding-head:before { content: '\1f92f'; }
 .emoji-grimacing-face:before { content: '\1f62c'; }
-.emoji-face-with-open-mouth-cold-sweat:before { content: '\1f630'; }
+.emoji-anxious-face-with-sweat:before { content: '\1f630'; }
 .emoji-face-screaming-in-fear:before { content: '\1f631'; }
 .emoji-flushed-face:before { content: '\1f633'; }
+.emoji-crazy-face:before { content: '\1f92a'; }
 .emoji-dizzy-face:before { content: '\1f635'; }
 .emoji-pouting-face:before { content: '\1f621'; }
 .emoji-angry-face:before { content: '\1f620'; }
+.emoji-face-with-symbols-on-mouth:before { content: '\1f92c'; }
