--- a/sass/emojis/smileys-people/_face-role.scss
+++ b/sass/emojis/smileys-people/_face-role.scss
@@ -2,3 +2,7 @@
 .emoji-cowboy-hat-face:before { content: '\1f920'; }
 .emoji-clown-face:before { content: '\1f921'; }
 .emoji-lying-face:before { content: '\1f925'; }
+.emoji-shushing-face:before { content: '\1f92b'; }
+.emoji-face-with-hand-over-mouth:before { content: '\1f92d'; }
+.emoji-face-with-monocle:before { content: '\1f9d0'; }
+.emoji-nerd-face:before { content: '\1f913'; }
