--- a/sass/emojis/smileys-people/_face-sick.scss
+++ b/sass/emojis/smileys-people/_face-sick.scss
@@ -2,4 +2,5 @@
 .emoji-face-with-thermometer:before { content: '\1f912'; }
 .emoji-face-with-head-bandage:before { content: '\1f915'; }
 .emoji-nauseated-face:before { content: '\1f922'; }
+.emoji-face-vomiting:before { content: '\1f92e'; }
 .emoji-sneezing-face:before { content: '\1f927'; }
