--- a/sass/emojis/smileys-people/_person-activity.scss
+++ b/sass/emojis/smileys-people/_person-activity.scss
@@ -82,15 +82,81 @@
 .emoji-man-dancing-medium-skin-tone:before { content: '\1f57a\1f3fd'; }
 .emoji-man-dancing-medium-dark-skin-tone:before { content: '\1f57a\1f3fe'; }
 .emoji-man-dancing-dark-skin-tone:before { content: '\1f57a\1f3ff'; }
-.emoji-people-with-bunny-ears-partying:before { content: '\1f46f'; }
-.emoji-men-with-bunny-ears-partying:before { content: '\1f46f\200d\2642\fe0f'; }
-.emoji-women-with-bunny-ears-partying:before { content: '\1f46f\200d\2640\fe0f'; }
-.emoji-man-in-business-suit-levitating:before { content: '\1f574'; }
-.emoji-man-in-business-suit-levitating-light-skin-tone:before { content: '\1f574\1f3fb'; }
-.emoji-man-in-business-suit-levitating-medium-light-skin-tone:before { content: '\1f574\1f3fc'; }
-.emoji-man-in-business-suit-levitating-medium-skin-tone:before { content: '\1f574\1f3fd'; }
-.emoji-man-in-business-suit-levitating-medium-dark-skin-tone:before { content: '\1f574\1f3fe'; }
-.emoji-man-in-business-suit-levitating-dark-skin-tone:before { content: '\1f574\1f3ff'; }
+.emoji-people-with-bunny-ears:before { content: '\1f46f'; }
+.emoji-men-with-bunny-ears:before { content: '\1f46f\200d\2642\fe0f'; }
+.emoji-women-with-bunny-ears:before { content: '\1f46f\200d\2640\fe0f'; }
+.emoji-person-in-steamy-room:before { content: '\1f9d6'; }
+.emoji-person-in-steamy-room-light-skin-tone:before { content: '\1f9d6\1f3fb'; }
+.emoji-person-in-steamy-room-medium-light-skin-tone:before { content: '\1f9d6\1f3fc'; }
+.emoji-person-in-steamy-room-medium-skin-tone:before { content: '\1f9d6\1f3fd'; }
+.emoji-person-in-steamy-room-medium-dark-skin-tone:before { content: '\1f9d6\1f3fe'; }
+.emoji-person-in-steamy-room-dark-skin-tone:before { content: '\1f9d6\1f3ff'; }
+.emoji-woman-in-steamy-room:before { content: '\1f9d6\200d\2640\fe0f'; }
+.emoji-woman-in-steamy-room-light-skin-tone:before { content: '\1f9d6\1f3fb\200d\2640\fe0f'; }
+.emoji-woman-in-steamy-room-medium-light-skin-tone:before { content: '\1f9d6\1f3fc\200d\2640\fe0f'; }
+.emoji-woman-in-steamy-room-medium-skin-tone:before { content: '\1f9d6\1f3fd\200d\2640\fe0f'; }
+.emoji-woman-in-steamy-room-medium-dark-skin-tone:before { content: '\1f9d6\1f3fe\200d\2640\fe0f'; }
+.emoji-woman-in-steamy-room-dark-skin-tone:before { content: '\1f9d6\1f3ff\200d\2640\fe0f'; }
+.emoji-man-in-steamy-room:before { content: '\1f9d6\200d\2642\fe0f'; }
+.emoji-man-in-steamy-room-light-skin-tone:before { content: '\1f9d6\1f3fb\200d\2642\fe0f'; }
+.emoji-man-in-steamy-room-medium-light-skin-tone:before { content: '\1f9d6\1f3fc\200d\2642\fe0f'; }
+.emoji-man-in-steamy-room-medium-skin-tone:before { content: '\1f9d6\1f3fd\200d\2642\fe0f'; }
+.emoji-man-in-steamy-room-medium-dark-skin-tone:before { content: '\1f9d6\1f3fe\200d\2642\fe0f'; }
+.emoji-man-in-steamy-room-dark-skin-tone:before { content: '\1f9d6\1f3ff\200d\2642\fe0f'; }
+.emoji-person-climbing:before { content: '\1f9d7'; }
+.emoji-person-climbing-light-skin-tone:before { content: '\1f9d7\1f3fb'; }
+.emoji-person-climbing-medium-light-skin-tone:before { content: '\1f9d7\1f3fc'; }
+.emoji-person-climbing-medium-skin-tone:before { content: '\1f9d7\1f3fd'; }
+.emoji-person-climbing-medium-dark-skin-tone:before { content: '\1f9d7\1f3fe'; }
+.emoji-person-climbing-dark-skin-tone:before { content: '\1f9d7\1f3ff'; }
+.emoji-woman-climbing:before { content: '\1f9d7\200d\2640\fe0f'; }
+.emoji-woman-climbing-light-skin-tone:before { content: '\1f9d7\1f3fb\200d\2640\fe0f'; }
+.emoji-woman-climbing-medium-light-skin-tone:before { content: '\1f9d7\1f3fc\200d\2640\fe0f'; }
+.emoji-woman-climbing-medium-skin-tone:before { content: '\1f9d7\1f3fd\200d\2640\fe0f'; }
+.emoji-woman-climbing-medium-dark-skin-tone:before { content: '\1f9d7\1f3fe\200d\2640\fe0f'; }
+.emoji-woman-climbing-dark-skin-tone:before { content: '\1f9d7\1f3ff\200d\2640\fe0f'; }
+.emoji-man-climbing:before { content: '\1f9d7\200d\2642\fe0f'; }
+.emoji-man-climbing-light-skin-tone:before { content: '\1f9d7\1f3fb\200d\2642\fe0f'; }
+.emoji-man-climbing-medium-light-skin-tone:before { content: '\1f9d7\1f3fc\200d\2642\fe0f'; }
+.emoji-man-climbing-medium-skin-tone:before { content: '\1f9d7\1f3fd\200d\2642\fe0f'; }
+.emoji-man-climbing-medium-dark-skin-tone:before { content: '\1f9d7\1f3fe\200d\2642\fe0f'; }
+.emoji-man-climbing-dark-skin-tone:before { content: '\1f9d7\1f3ff\200d\2642\fe0f'; }
+.emoji-person-in-lotus-position:before { content: '\1f9d8'; }
+.emoji-person-in-lotus-position-light-skin-tone:before { content: '\1f9d8\1f3fb'; }
+.emoji-person-in-lotus-position-medium-light-skin-tone:before { content: '\1f9d8\1f3fc'; }
+.emoji-person-in-lotus-position-medium-skin-tone:before { content: '\1f9d8\1f3fd'; }
+.emoji-person-in-lotus-position-medium-dark-skin-tone:before { content: '\1f9d8\1f3fe'; }
+.emoji-person-in-lotus-position-dark-skin-tone:before { content: '\1f9d8\1f3ff'; }
+.emoji-woman-in-lotus-position:before { content: '\1f9d8\200d\2640\fe0f'; }
+.emoji-woman-in-lotus-position-light-skin-tone:before { content: '\1f9d8\1f3fb\200d\2640\fe0f'; }
+.emoji-woman-in-lotus-position-medium-light-skin-tone:before { content: '\1f9d8\1f3fc\200d\2640\fe0f'; }
+.emoji-woman-in-lotus-position-medium-skin-tone:before { content: '\1f9d8\1f3fd\200d\2640\fe0f'; }
+.emoji-woman-in-lotus-position-medium-dark-skin-tone:before { content: '\1f9d8\1f3fe\200d\2640\fe0f'; }
+.emoji-woman-in-lotus-position-dark-skin-tone:before { content: '\1f9d8\1f3ff\200d\2640\fe0f'; }
+.emoji-man-in-lotus-position:before { content: '\1f9d8\200d\2642\fe0f'; }
+.emoji-man-in-lotus-position-light-skin-tone:before { content: '\1f9d8\1f3fb\200d\2642\fe0f'; }
+.emoji-man-in-lotus-position-medium-light-skin-tone:before { content: '\1f9d8\1f3fc\200d\2642\fe0f'; }
+.emoji-man-in-lotus-position-medium-skin-tone:before { content: '\1f9d8\1f3fd\200d\2642\fe0f'; }
+.emoji-man-in-lotus-position-medium-dark-skin-tone:before { content: '\1f9d8\1f3fe\200d\2642\fe0f'; }
+.emoji-man-in-lotus-position-dark-skin-tone:before { content: '\1f9d8\1f3ff\200d\2642\fe0f'; }
+.emoji-person-taking-bath:before { content: '\1f6c0'; }
+.emoji-person-taking-bath-light-skin-tone:before { content: '\1f6c0\1f3fb'; }
+.emoji-person-taking-bath-medium-light-skin-tone:before { content: '\1f6c0\1f3fc'; }
+.emoji-person-taking-bath-medium-skin-tone:before { content: '\1f6c0\1f3fd'; }
+.emoji-person-taking-bath-medium-dark-skin-tone:before { content: '\1f6c0\1f3fe'; }
+.emoji-person-taking-bath-dark-skin-tone:before { content: '\1f6c0\1f3ff'; }
+.emoji-person-in-bed:before { content: '\1f6cc'; }
+.emoji-person-in-bed-light-skin-tone:before { content: '\1f6cc\1f3fb'; }
+.emoji-person-in-bed-medium-light-skin-tone:before { content: '\1f6cc\1f3fc'; }
+.emoji-person-in-bed-medium-skin-tone:before { content: '\1f6cc\1f3fd'; }
+.emoji-person-in-bed-medium-dark-skin-tone:before { content: '\1f6cc\1f3fe'; }
+.emoji-person-in-bed-dark-skin-tone:before { content: '\1f6cc\1f3ff'; }
+.emoji-man-in-suit-levitating:before { content: '\1f574'; }
+.emoji-man-in-suit-levitating-light-skin-tone:before { content: '\1f574\1f3fb'; }
+.emoji-man-in-suit-levitating-medium-light-skin-tone:before { content: '\1f574\1f3fc'; }
+.emoji-man-in-suit-levitating-medium-skin-tone:before { content: '\1f574\1f3fd'; }
+.emoji-man-in-suit-levitating-medium-dark-skin-tone:before { content: '\1f574\1f3fe'; }
+.emoji-man-in-suit-levitating-dark-skin-tone:before { content: '\1f574\1f3ff'; }
 .emoji-speaking-head:before { content: '\1f5e3'; }
 .emoji-bust-in-silhouette:before { content: '\1f464'; }
 .emoji-busts-in-silhouette:before { content: '\1f465'; }
