--- a/sass/emojis/smileys-people/_person.scss
+++ b/sass/emojis/smileys-people/_person.scss
@@ -1,3 +1,15 @@
+.emoji-baby:before { content: '\1f476'; }
+.emoji-baby-light-skin-tone:before { content: '\1f476\1f3fb'; }
+.emoji-baby-medium-light-skin-tone:before { content: '\1f476\1f3fc'; }
+.emoji-baby-medium-skin-tone:before { content: '\1f476\1f3fd'; }
+.emoji-baby-medium-dark-skin-tone:before { content: '\1f476\1f3fe'; }
+.emoji-baby-dark-skin-tone:before { content: '\1f476\1f3ff'; }
+.emoji-child:before { content: '\1f9d2'; }
+.emoji-child-light-skin-tone:before { content: '\1f9d2\1f3fb'; }
+.emoji-child-medium-light-skin-tone:before { content: '\1f9d2\1f3fc'; }
+.emoji-child-medium-skin-tone:before { content: '\1f9d2\1f3fd'; }
+.emoji-child-medium-dark-skin-tone:before { content: '\1f9d2\1f3fe'; }
+.emoji-child-dark-skin-tone:before { content: '\1f9d2\1f3ff'; }
 .emoji-boy:before { content: '\1f466'; }
 .emoji-boy-light-skin-tone:before { content: '\1f466\1f3fb'; }
 .emoji-boy-medium-light-skin-tone:before { content: '\1f466\1f3fc'; }
@@ -10,6 +22,12 @@
 .emoji-girl-medium-skin-tone:before { content: '\1f467\1f3fd'; }
 .emoji-girl-medium-dark-skin-tone:before { content: '\1f467\1f3fe'; }
 .emoji-girl-dark-skin-tone:before { content: '\1f467\1f3ff'; }
+.emoji-adult:before { content: '\1f9d1'; }
+.emoji-adult-light-skin-tone:before { content: '\1f9d1\1f3fb'; }
+.emoji-adult-medium-light-skin-tone:before { content: '\1f9d1\1f3fc'; }
+.emoji-adult-medium-skin-tone:before { content: '\1f9d1\1f3fd'; }
+.emoji-adult-medium-dark-skin-tone:before { content: '\1f9d1\1f3fe'; }
+.emoji-adult-dark-skin-tone:before { content: '\1f9d1\1f3ff'; }
 .emoji-man:before { content: '\1f468'; }
 .emoji-man-light-skin-tone:before { content: '\1f468\1f3fb'; }
 .emoji-man-medium-light-skin-tone:before { content: '\1f468\1f3fc'; }
@@ -22,6 +40,12 @@
 .emoji-woman-medium-skin-tone:before { content: '\1f469\1f3fd'; }
 .emoji-woman-medium-dark-skin-tone:before { content: '\1f469\1f3fe'; }
 .emoji-woman-dark-skin-tone:before { content: '\1f469\1f3ff'; }
+.emoji-older-adult:before { content: '\1f9d3'; }
+.emoji-older-adult-light-skin-tone:before { content: '\1f9d3\1f3fb'; }
+.emoji-older-adult-medium-light-skin-tone:before { content: '\1f9d3\1f3fc'; }
+.emoji-older-adult-medium-skin-tone:before { content: '\1f9d3\1f3fd'; }
+.emoji-older-adult-medium-dark-skin-tone:before { content: '\1f9d3\1f3fe'; }
+.emoji-older-adult-dark-skin-tone:before { content: '\1f9d3\1f3ff'; }
 .emoji-old-man:before { content: '\1f474'; }
 .emoji-old-man-light-skin-tone:before { content: '\1f474\1f3fb'; }
 .emoji-old-man-medium-light-skin-tone:before { content: '\1f474\1f3fc'; }
@@ -34,15 +58,3 @@
 .emoji-old-woman-medium-skin-tone:before { content: '\1f475\1f3fd'; }
 .emoji-old-woman-medium-dark-skin-tone:before { content: '\1f475\1f3fe'; }
 .emoji-old-woman-dark-skin-tone:before { content: '\1f475\1f3ff'; }
-.emoji-baby:before { content: '\1f476'; }
-.emoji-baby-light-skin-tone:before { content: '\1f476\1f3fb'; }
-.emoji-baby-medium-light-skin-tone:before { content: '\1f476\1f3fc'; }
-.emoji-baby-medium-skin-tone:before { content: '\1f476\1f3fd'; }
-.emoji-baby-medium-dark-skin-tone:before { content: '\1f476\1f3fe'; }
-.emoji-baby-dark-skin-tone:before { content: '\1f476\1f3ff'; }
-.emoji-baby-angel:before { content: '\1f47c'; }
-.emoji-baby-angel-light-skin-tone:before { content: '\1f47c\1f3fb'; }
-.emoji-baby-angel-medium-light-skin-tone:before { content: '\1f47c\1f3fc'; }
-.emoji-baby-angel-medium-skin-tone:before { content: '\1f47c\1f3fd'; }
-.emoji-baby-angel-medium-dark-skin-tone:before { content: '\1f47c\1f3fe'; }
-.emoji-baby-angel-dark-skin-tone:before { content: '\1f47c\1f3ff'; }
