--- a/sass/emojis/travel-places/_place-building.scss
+++ b/sass/emojis/travel-places/_place-building.scss
@@ -1,7 +1,7 @@
 .emoji-stadium:before { content: '\1f3df'; }
 .emoji-classical-building:before { content: '\1f3db'; }
 .emoji-building-construction:before { content: '\1f3d7'; }
-.emoji-house:before { content: '\1f3d8'; }
+.emoji-houses:before { content: '\1f3d8'; }
 .emoji-cityscape:before { content: '\1f3d9'; }
 .emoji-derelict-house:before { content: '\1f3da'; }
 .emoji-house:before { content: '\1f3e0'; }
