--- a/sass/emojis/travel-places/_sky-weather.scss
+++ b/sass/emojis/travel-places/_sky-weather.scss
@@ -8,11 +8,11 @@
 .emoji-waning-crescent-moon:before { content: '\1f318'; }
 .emoji-crescent-moon:before { content: '\1f319'; }
 .emoji-new-moon-face:before { content: '\1f31a'; }
-.emoji-first-quarter-moon-with-face:before { content: '\1f31b'; }
-.emoji-last-quarter-moon-with-face:before { content: '\1f31c'; }
+.emoji-first-quarter-moon-face:before { content: '\1f31b'; }
+.emoji-last-quarter-moon-face:before { content: '\1f31c'; }
 .emoji-thermometer:before { content: '\1f321'; }
 .emoji-sun:before { content: '\2600'; }
-.emoji-full-moon-with-face:before { content: '\1f31d'; }
+.emoji-full-moon-face:before { content: '\1f31d'; }
 .emoji-sun-with-face:before { content: '\1f31e'; }
 .emoji-white-medium-star:before { content: '\2b50'; }
 .emoji-glowing-star:before { content: '\1f31f'; }
