--- a/sass/emojis/travel-places/_time.scss
+++ b/sass/emojis/travel-places/_time.scss
@@ -1,5 +1,5 @@
-.emoji-hourglass:before { content: '\231b'; }
-.emoji-hourglass-with-flowing-sand:before { content: '\23f3'; }
+.emoji-hourglass-done:before { content: '\231b'; }
+.emoji-hourglass-not-done:before { content: '\23f3'; }
 .emoji-watch:before { content: '\231a'; }
 .emoji-alarm-clock:before { content: '\23f0'; }
 .emoji-stopwatch:before { content: '\23f1'; }
