--- a/sass/emojis/travel-places/_transport-air.scss
+++ b/sass/emojis/travel-places/_transport-air.scss
@@ -7,5 +7,6 @@
 .emoji-suspension-railway:before { content: '\1f69f'; }
 .emoji-mountain-cableway:before { content: '\1f6a0'; }
 .emoji-aerial-tramway:before { content: '\1f6a1'; }
-.emoji-rocket:before { content: '\1f680'; }
 .emoji-satellite:before { content: '\1f6f0'; }
+.emoji-rocket:before { content: '\1f680'; }
+.emoji-flying-saucer:before { content: '\1f6f8'; }
