--- a/sass/emojis/travel-places/_transport-ground.scss
+++ b/sass/emojis/travel-places/_transport-ground.scss
@@ -1,7 +1,7 @@
 .emoji-locomotive:before { content: '\1f682'; }
 .emoji-railway-car:before { content: '\1f683'; }
 .emoji-high-speed-train:before { content: '\1f684'; }
-.emoji-high-speed-train-with-bullet-nose:before { content: '\1f685'; }
+.emoji-bullet-train:before { content: '\1f685'; }
 .emoji-train:before { content: '\1f686'; }
 .emoji-metro:before { content: '\1f687'; }
 .emoji-light-rail:before { content: '\1f688'; }
