--- a/sass/emojis/smileys-people/_all.scss
+++ b/sass/emojis/smileys-people/_all.scss
@@ -1,18 +1,18 @@
 @import "face-positive";
-@import "body";
+@import "person-fantasy";
 @import "family";
 @import "person-sport";
 @import "face-negative";
-@import "face-neutral";
-@import "cat-face";
 @import "face-role";
+@import "cat-face";
+@import "face-neutral";
 @import "person";
 @import "person-role";
 @import "monkey-face";
 @import "face-sick";
 @import "person-activity";
 @import "emotion";
-@import "skin-tone";
+@import "body";
 @import "clothing";
-@import "creature-face";
+@import "face-fantasy";
 @import "person-gesture";
