--- a/sass/emojis/smileys-people/_face-positive.scss
+++ b/sass/emojis/smileys-people/_face-positive.scss
@@ -1,14 +1,14 @@
 .emoji-grinning-face:before { content: '\1f600'; }
-.emoji-grinning-face-with-smiling-eyes:before { content: '\1f601'; }
+.emoji-beaming-face-with-smiling-eyes:before { content: '\1f601'; }
 .emoji-face-with-tears-of-joy:before { content: '\1f602'; }
 .emoji-rolling-on-the-floor-laughing:before { content: '\1f923'; }
-.emoji-smiling-face-with-open-mouth:before { content: '\1f603'; }
-.emoji-smiling-face-with-open-mouth-smiling-eyes:before { content: '\1f604'; }
-.emoji-smiling-face-with-open-mouth-cold-sweat:before { content: '\1f605'; }
-.emoji-smiling-face-with-open-mouth-closed-eyes:before { content: '\1f606'; }
+.emoji-grinning-face-with-big-eyes:before { content: '\1f603'; }
+.emoji-grinning-face-with-smiling-eyes:before { content: '\1f604'; }
+.emoji-grinning-face-with-sweat:before { content: '\1f605'; }
+.emoji-grinning-squinting-face:before { content: '\1f606'; }
 .emoji-winking-face:before { content: '\1f609'; }
 .emoji-smiling-face-with-smiling-eyes:before { content: '\1f60a'; }
-.emoji-face-savouring-delicious-food:before { content: '\1f60b'; }
+.emoji-face-savoring-food:before { content: '\1f60b'; }
 .emoji-smiling-face-with-sunglasses:before { content: '\1f60e'; }
 .emoji-smiling-face-with-heart-eyes:before { content: '\1f60d'; }
 .emoji-face-blowing-a-kiss:before { content: '\1f618'; }
@@ -18,3 +18,4 @@
 .emoji-smiling-face:before { content: '\263a'; }
 .emoji-slightly-smiling-face:before { content: '\1f642'; }
 .emoji-hugging-face:before { content: '\1f917'; }
+.emoji-star-struck:before { content: '\1f929'; }
