--- a/sass/emojis/smileys-people/_person-role.scss
+++ b/sass/emojis/smileys-people/_person-role.scss
@@ -262,6 +262,18 @@
 .emoji-woman-construction-worker-medium-skin-tone:before { content: '\1f477\1f3fd\200d\2640\fe0f'; }
 .emoji-woman-construction-worker-medium-dark-skin-tone:before { content: '\1f477\1f3fe\200d\2640\fe0f'; }
 .emoji-woman-construction-worker-dark-skin-tone:before { content: '\1f477\1f3ff\200d\2640\fe0f'; }
+.emoji-prince:before { content: '\1f934'; }
+.emoji-prince-light-skin-tone:before { content: '\1f934\1f3fb'; }
+.emoji-prince-medium-light-skin-tone:before { content: '\1f934\1f3fc'; }
+.emoji-prince-medium-skin-tone:before { content: '\1f934\1f3fd'; }
+.emoji-prince-medium-dark-skin-tone:before { content: '\1f934\1f3fe'; }
+.emoji-prince-dark-skin-tone:before { content: '\1f934\1f3ff'; }
+.emoji-princess:before { content: '\1f478'; }
+.emoji-princess-light-skin-tone:before { content: '\1f478\1f3fb'; }
+.emoji-princess-medium-light-skin-tone:before { content: '\1f478\1f3fc'; }
+.emoji-princess-medium-skin-tone:before { content: '\1f478\1f3fd'; }
+.emoji-princess-medium-dark-skin-tone:before { content: '\1f478\1f3fe'; }
+.emoji-princess-dark-skin-tone:before { content: '\1f478\1f3ff'; }
 .emoji-person-wearing-turban:before { content: '\1f473'; }
 .emoji-person-wearing-turban-light-skin-tone:before { content: '\1f473\1f3fb'; }
 .emoji-person-wearing-turban-medium-light-skin-tone:before { content: '\1f473\1f3fc'; }
@@ -280,6 +292,24 @@
 .emoji-woman-wearing-turban-medium-skin-tone:before { content: '\1f473\1f3fd\200d\2640\fe0f'; }
 .emoji-woman-wearing-turban-medium-dark-skin-tone:before { content: '\1f473\1f3fe\200d\2640\fe0f'; }
 .emoji-woman-wearing-turban-dark-skin-tone:before { content: '\1f473\1f3ff\200d\2640\fe0f'; }
+.emoji-man-with-chinese-cap:before { content: '\1f472'; }
+.emoji-man-with-chinese-cap-light-skin-tone:before { content: '\1f472\1f3fb'; }
+.emoji-man-with-chinese-cap-medium-light-skin-tone:before { content: '\1f472\1f3fc'; }
+.emoji-man-with-chinese-cap-medium-skin-tone:before { content: '\1f472\1f3fd'; }
+.emoji-man-with-chinese-cap-medium-dark-skin-tone:before { content: '\1f472\1f3fe'; }
+.emoji-man-with-chinese-cap-dark-skin-tone:before { content: '\1f472\1f3ff'; }
+.emoji-woman-with-headscarf:before { content: '\1f9d5'; }
+.emoji-woman-with-headscarf-light-skin-tone:before { content: '\1f9d5\1f3fb'; }
+.emoji-woman-with-headscarf-medium-light-skin-tone:before { content: '\1f9d5\1f3fc'; }
+.emoji-woman-with-headscarf-medium-skin-tone:before { content: '\1f9d5\1f3fd'; }
+.emoji-woman-with-headscarf-medium-dark-skin-tone:before { content: '\1f9d5\1f3fe'; }
+.emoji-woman-with-headscarf-dark-skin-tone:before { content: '\1f9d5\1f3ff'; }
+.emoji-bearded-person:before { content: '\1f9d4'; }
+.emoji-bearded-person-light-skin-tone:before { content: '\1f9d4\1f3fb'; }
+.emoji-bearded-person-medium-light-skin-tone:before { content: '\1f9d4\1f3fc'; }
+.emoji-bearded-person-medium-skin-tone:before { content: '\1f9d4\1f3fd'; }
+.emoji-bearded-person-medium-dark-skin-tone:before { content: '\1f9d4\1f3fe'; }
+.emoji-bearded-person-dark-skin-tone:before { content: '\1f9d4\1f3ff'; }
 .emoji-blond-haired-person:before { content: '\1f471'; }
 .emoji-blond-haired-person-light-skin-tone:before { content: '\1f471\1f3fb'; }
 .emoji-blond-haired-person-medium-light-skin-tone:before { content: '\1f471\1f3fc'; }
@@ -298,51 +328,27 @@
 .emoji-blond-haired-woman-medium-skin-tone:before { content: '\1f471\1f3fd\200d\2640\fe0f'; }
 .emoji-blond-haired-woman-medium-dark-skin-tone:before { content: '\1f471\1f3fe\200d\2640\fe0f'; }
 .emoji-blond-haired-woman-dark-skin-tone:before { content: '\1f471\1f3ff\200d\2640\fe0f'; }
-.emoji-santa-claus:before { content: '\1f385'; }
-.emoji-santa-claus-light-skin-tone:before { content: '\1f385\1f3fb'; }
-.emoji-santa-claus-medium-light-skin-tone:before { content: '\1f385\1f3fc'; }
-.emoji-santa-claus-medium-skin-tone:before { content: '\1f385\1f3fd'; }
-.emoji-santa-claus-medium-dark-skin-tone:before { content: '\1f385\1f3fe'; }
-.emoji-santa-claus-dark-skin-tone:before { content: '\1f385\1f3ff'; }
-.emoji-mrs-claus:before { content: '\1f936'; }
-.emoji-mrs-claus-light-skin-tone:before { content: '\1f936\1f3fb'; }
-.emoji-mrs-claus-medium-light-skin-tone:before { content: '\1f936\1f3fc'; }
-.emoji-mrs-claus-medium-skin-tone:before { content: '\1f936\1f3fd'; }
-.emoji-mrs-claus-medium-dark-skin-tone:before { content: '\1f936\1f3fe'; }
-.emoji-mrs-claus-dark-skin-tone:before { content: '\1f936\1f3ff'; }
-.emoji-princess:before { content: '\1f478'; }
-.emoji-princess-light-skin-tone:before { content: '\1f478\1f3fb'; }
-.emoji-princess-medium-light-skin-tone:before { content: '\1f478\1f3fc'; }
-.emoji-princess-medium-skin-tone:before { content: '\1f478\1f3fd'; }
-.emoji-princess-medium-dark-skin-tone:before { content: '\1f478\1f3fe'; }
-.emoji-princess-dark-skin-tone:before { content: '\1f478\1f3ff'; }
-.emoji-prince:before { content: '\1f934'; }
-.emoji-prince-light-skin-tone:before { content: '\1f934\1f3fb'; }
-.emoji-prince-medium-light-skin-tone:before { content: '\1f934\1f3fc'; }
-.emoji-prince-medium-skin-tone:before { content: '\1f934\1f3fd'; }
-.emoji-prince-medium-dark-skin-tone:before { content: '\1f934\1f3fe'; }
-.emoji-prince-dark-skin-tone:before { content: '\1f934\1f3ff'; }
-.emoji-bride-with-veil:before { content: '\1f470'; }
-.emoji-bride-with-veil-light-skin-tone:before { content: '\1f470\1f3fb'; }
-.emoji-bride-with-veil-medium-light-skin-tone:before { content: '\1f470\1f3fc'; }
-.emoji-bride-with-veil-medium-skin-tone:before { content: '\1f470\1f3fd'; }
-.emoji-bride-with-veil-medium-dark-skin-tone:before { content: '\1f470\1f3fe'; }
-.emoji-bride-with-veil-dark-skin-tone:before { content: '\1f470\1f3ff'; }
 .emoji-man-in-tuxedo:before { content: '\1f935'; }
 .emoji-man-in-tuxedo-light-skin-tone:before { content: '\1f935\1f3fb'; }
 .emoji-man-in-tuxedo-medium-light-skin-tone:before { content: '\1f935\1f3fc'; }
 .emoji-man-in-tuxedo-medium-skin-tone:before { content: '\1f935\1f3fd'; }
 .emoji-man-in-tuxedo-medium-dark-skin-tone:before { content: '\1f935\1f3fe'; }
 .emoji-man-in-tuxedo-dark-skin-tone:before { content: '\1f935\1f3ff'; }
+.emoji-bride-with-veil:before { content: '\1f470'; }
+.emoji-bride-with-veil-light-skin-tone:before { content: '\1f470\1f3fb'; }
+.emoji-bride-with-veil-medium-light-skin-tone:before { content: '\1f470\1f3fc'; }
+.emoji-bride-with-veil-medium-skin-tone:before { content: '\1f470\1f3fd'; }
+.emoji-bride-with-veil-medium-dark-skin-tone:before { content: '\1f470\1f3fe'; }
+.emoji-bride-with-veil-dark-skin-tone:before { content: '\1f470\1f3ff'; }
 .emoji-pregnant-woman:before { content: '\1f930'; }
 .emoji-pregnant-woman-light-skin-tone:before { content: '\1f930\1f3fb'; }
 .emoji-pregnant-woman-medium-light-skin-tone:before { content: '\1f930\1f3fc'; }
 .emoji-pregnant-woman-medium-skin-tone:before { content: '\1f930\1f3fd'; }
 .emoji-pregnant-woman-medium-dark-skin-tone:before { content: '\1f930\1f3fe'; }
 .emoji-pregnant-woman-dark-skin-tone:before { content: '\1f930\1f3ff'; }
-.emoji-man-with-chinese-cap:before { content: '\1f472'; }
-.emoji-man-with-chinese-cap-light-skin-tone:before { content: '\1f472\1f3fb'; }
-.emoji-man-with-chinese-cap-medium-light-skin-tone:before { content: '\1f472\1f3fc'; }
-.emoji-man-with-chinese-cap-medium-skin-tone:before { content: '\1f472\1f3fd'; }
-.emoji-man-with-chinese-cap-medium-dark-skin-tone:before { content: '\1f472\1f3fe'; }
-.emoji-man-with-chinese-cap-dark-skin-tone:before { content: '\1f472\1f3ff'; }
+.emoji-breast-feeding:before { content: '\1f931'; }
+.emoji-breast-feeding-light-skin-tone:before { content: '\1f931\1f3fb'; }
+.emoji-breast-feeding-medium-light-skin-tone:before { content: '\1f931\1f3fc'; }
+.emoji-breast-feeding-medium-skin-tone:before { content: '\1f931\1f3fd'; }
+.emoji-breast-feeding-medium-dark-skin-tone:before { content: '\1f931\1f3fe'; }
+.emoji-breast-feeding-dark-skin-tone:before { content: '\1f931\1f3ff'; }
